<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <ImageButton
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/banner" />
     
  
    <TextView
        android:id="@+id/Mypage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/banner"
        android:gravity="center"
        android:textSize="15sp"
        android:background="#1987E5"
        android:textColor="#FFFFFF"
        android:text="@string/Mypage_bt"/>
    
     <TextView
        android:id="@+id/ruisekipt"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Mypage"
        android:textSize="13sp"
        android:background="#FFFFFF"
        android:textColor="#FF0000"
        android:text="@string/ruisekipt"/>
    
    <TextView
        android:id="@+id/kongetsupt"
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ruisekipt"
        android:textSize="13sp"
        android:background="#FFFFFF"
        android:textColor="#FF0000"
        android:text="@string/kongetsupt"/>
    
    <TextView
        android:id="@+id/Toukourekishi"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/kongetsupt"
        android:gravity="center"
        android:textSize="15sp"
        android:background="#1987E5"
        android:textColor="#FFFFFF"
        android:text="@string/Toukourekishi"/>
    
    <Button 
        android:id="@+id/Likerekishi"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/Toukourekishi"
        android:layout_above="@+id/lv_toukou"
        android:layout_marginRight="1dp"
        android:textSize="15sp"
        android:background="#74A9D6"
        android:textColor="#FFFFFF"
        android:text="@string/Likerekishi"/>
    
     <ListView 
       android:id="@+id/lv_toukou"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="7dp"
       android:layout_marginRight="7dp"
       android:background="#FAFAFA"
       android:layout_below="@+id/Toukourekishi"
       android:layout_above="@+id/Campusinfo_bt"
       android:entries="@array/lv_campus"/>
    
    
   	
    <Button 
        android:id="@+id/Link_bt"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="1dp"
        android:textSize="15sp"
        android:background="#1987E5"
        android:textColor="#FFFFFF"
        android:text="@string/Link_bt" />
     
    
     <Button 
        android:id="@+id/Share_bt"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_toLeftOf="@+id/Link_bt"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="1dp"
         android:textSize="15sp"
        android:background="#1987E5"
        android:textColor="#FFFFFF"
        android:text="@string/Share_bt" />
     
     <Button 
        android:id="@+id/Campusinfo_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toLeftOf="@+id/Share_bt"
        android:layout_toRightOf="@+id/News_bt"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:background="#1987E5"
        android:textColor="#FFFFFF"
        android:text="@string/Campusinfo_bt" />
     
     <Button 
        android:id="@+id/News_bt"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
        android:textSize="15sp"
        android:background="#1987E5"
        android:textColor="#FFFFFF"
        android:text="@string/News_bt" />
</RelativeLayout>
    